--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,13 +14,11 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - uses: docker/login-action@v1
       - name: Login to DockerHub
-        env:
+        uses: docker/login-action@v1
+        with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-        run: |
-          docker login -u $username -p $password
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
