--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Transfer Docker Compose and Dockerfile and DAGs to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -i de-3-1-key.pem docker-compose.yaml ${{ secrets.BASTION_USERNAME }}@${{ secrets.BASTION_HOST }}:/de-3-1-airflow
-          scp -o StrictHostKeyChecking=no -i de-3-1-key.pem Dockerfile ${{ secrets.BASTION_USERNAME }}@${{ secrets.BASTION_HOST }}:/de-3-1-airflow
+          # scp -o StrictHostKeyChecking=no -i de-3-1-key.pem docker-compose.yaml ${{ secrets.BASTION_USERNAME }}@${{ secrets.BASTION_HOST }}:/de-3-1-airflow
+          # scp -o StrictHostKeyChecking=no -i de-3-1-key.pem Dockerfile ${{ secrets.BASTION_USERNAME }}@${{ secrets.BASTION_HOST }}:/de-3-1-airflow
           scp -o StrictHostKeyChecking=no -i de-3-1-key.pem -r ./dags ${{ secrets.BASTION_USERNAME }}@${{ secrets.BASTION_HOST }}:/de-3-1-airflow
 
 
